# Anytask_Scraper

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: CHANGELOG.md  CLI.md  Configuration.md  Export_Formats.md  Library_Reference.md  QuickStart.md  TUI.md  roadmap.md
src/anytask_scraper/: __init__.py  _logging.py  cli.py  client.py  display.py  models.py  parser.py  storage.py
src/anytask_scraper/tui/: __init__.py  app.py  app.tcss  export_params.py
src/anytask_scraper/tui/screens/: __init__.py  login.py  main.py  submission.py
src/anytask_scraper/tui/widgets/: __init__.py  filter_bar.py  param_selector.py
src/anytask_scrapper/: __init__.py  cli.py  client.py  display.py  parser.py  storage.py
